# bill-note

./: .env  Cargo.toml  bill_note.sql  config.toml
src/: auth.rs  bill.rs  error.rs  main.rs
src/orm/: mod.rs
src/orm/model/: bill_tb.rs  mod.rs  prelude.rs  tag_tb.rs  user_tb.rs
