[package]
name = "bill-note"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
config-file = "0.2.3"
salvo = { version = "0.80.0", features = ["jwt-auth"] }
sea-orm = { version = "1.1.13", features = [
    "sqlx-mysql",
    "runtime-tokio-rustls",
    "macros",
] }
serde = "1.0.219"
serde_json = "1.0.140"
time = "0.3.41"
tokio = { version = "1.46.1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "time",
    "local-time",
] }
tracing-appender = "0.2"
